version 0.1.3 - switched to assertj